force-app/main/default/objects/Carrier_RFP__c/Carrier_RFP__c.object-meta.xml
<CustomObject>
    <label>Carrier RFP</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>RFP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier RFPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>