force-app/main/default/objects/Carrier_RFP__c/fields/Accident_Selected__c.field-meta.xml
<CustomField>
    <fullName>Accident_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accident Selected</label>
    <type>Checkbox</type>
</CustomField>