force-app/main/default/objects/Carrier_RFP__c/fields/Accident_Text__c.field-meta.xml
<CustomField>
    <fullName>Accident_Text__c</fullName>
    <formula>IF(  Accident_Selected__c  , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accident Text</label>
    <type>Text</type>
</CustomField>