force-app/main/default/objects/Carrier_RFP__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RFPs</relationshipName>
    <type>Lookup</type>
</CustomField>