force-app/main/default/objects/Carrier_RFP__c/fields/ASO_Stop_Loss__c.field-meta.xml
<CustomField>
    <fullName>ASO_Stop_Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASO &amp; Stop Loss</label>
    <type>Checkbox</type>
</CustomField>