force-app/main/default/objects/Carrier_RFP__c/fields/Basic_Vol_Life__c.field-meta.xml
<CustomField>
    <fullName>Basic_Vol_Life__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic &amp; Vol Life</label>
    <type>Checkbox</type>
</CustomField>