force-app/main/default/objects/Carrier_RFP__c/fields/Basic_Vol_Life_Text__c.field-meta.xml
<CustomField>
    <fullName>Basic_Vol_Life_Text__c</fullName>
    <formula>IF(  Basic_Vol_Life__c , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic &amp; Vol Life Text</label>
    <type>Text</type>
</CustomField>