force-app/main/default/objects/Carrier_RFP__c/fields/Carrier_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RFPs1</relationshipName>
    <type>Lookup</type>
</CustomField>