force-app/main/default/objects/Carrier_RFP__c/fields/Critical_Illness_Selected__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Illness Selected</label>
    <type>Checkbox</type>
</CustomField>