force-app/main/default/objects/Carrier_RFP__c/fields/Critical_Illness_text__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness_text__c</fullName>
    <formula>IF(  Critical_Illness_Selected__c  , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critical Illness text</label>
    <type>Text</type>
</CustomField>