force-app/main/default/objects/Carrier_RFP__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if this Carrier will be evaluated for dental coverage</description>
    <inlineHelpText>This box is checked if this Carrier will be evaluated for dental coverage</inlineHelpText>
    <label>Dental</label>
    <type>Checkbox</type>
</CustomField>