force-app/main/default/objects/Carrier_RFP__c/fields/Dental_Responses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Dental_Responses_JSON__c</fullName>
    <description>Dental responses from the RFI OS that can be used for later processing and retrieval by DataRaptor</description>
    <label>Dental Responses JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>