force-app/main/default/objects/Carrier_RFP__c/fields/Dental_Text__c.field-meta.xml
<CustomField>
    <fullName>Dental_Text__c</fullName>
    <formula>IF( Dental__c , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dental Text</label>
    <type>Text</type>
</CustomField>