force-app/main/default/objects/Carrier_RFP__c/fields/Hospital_Indemnity_Selected__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Indemnity_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Indemnity Selected</label>
    <type>Checkbox</type>
</CustomField>