force-app/main/default/objects/Carrier_RFP__c/fields/Hospital_Indemnity_text__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Indemnity_text__c</fullName>
    <formula>IF(  Hospital_Indemnity_Selected__c  , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Indemnity text</label>
    <type>Text</type>
</CustomField>