force-app/main/default/objects/Carrier_RFP__c/fields/LTD__c.field-meta.xml
<CustomField>
    <fullName>LTD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LTD</label>
    <type>Checkbox</type>
</CustomField>