force-app/main/default/objects/Carrier_RFP__c/fields/LTD_Text__c.field-meta.xml
<CustomField>
    <fullName>LTD_Text__c</fullName>
    <formula>IF(  LTD__c  , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTD Text</label>
    <type>Text</type>
</CustomField>