force-app/main/default/objects/Carrier_RFP__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if evaluating for Medical Coverage</description>
    <inlineHelpText>This box is checked if this Carrier will be evaluated for medical coverage</inlineHelpText>
    <label>Medical</label>
    <type>Checkbox</type>
</CustomField>