force-app/main/default/objects/Carrier_RFP__c/fields/Medical_Responses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Medical_Responses_JSON__c</fullName>
    <description>Contains all the medical responses from the information gathering OS. Can later be used to pull relevant information for processing.</description>
    <label>Medical Responses JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>