force-app/main/default/objects/Carrier_RFP__c/fields/Medical_Text__c.field-meta.xml
<CustomField>
    <fullName>Medical_Text__c</fullName>
    <formula>IF( Medical__c , &quot;Please Provide&quot;, &quot;Not At This Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Text</label>
    <type>Text</type>
</CustomField>