force-app/main/default/objects/Carrier_RFP__c/fields/Plan_Year_Placement__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year_Placement__c</fullName>
    <label>Plan Year Placement</label>
    <referenceTo>Plan_Year_Placement__c</referenceTo>
    <relationshipLabel>Carrier RFPs</relationshipLabel>
    <relationshipName>Carrier_RFPs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>