force-app/main/default/objects/Carrier_RFP__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>RFPs</relationshipName>
    <type>Lookup</type>
</CustomField>