force-app/main/default/objects/Carrier_RFP__c/fields/STD__c.field-meta.xml
<CustomField>
    <fullName>STD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STD</label>
    <type>Checkbox</type>
</CustomField>