force-app/main/default/objects/Carrier_RFP__c/fields/STD_Text__c.field-meta.xml
<CustomField>
    <fullName>STD_Text__c</fullName>
    <formula>IF( STD__c  , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STD Text</label>
    <type>Text</type>
</CustomField>