force-app/main/default/objects/Carrier_RFP__c/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if this Carrier will be evaluated for vision coverage</description>
    <inlineHelpText>This box is checked if this Carrier will be evaluated for vision coverage</inlineHelpText>
    <label>Vision</label>
    <type>Checkbox</type>
</CustomField>