force-app/main/default/objects/Carrier_RFP__c/fields/Vision_Responses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Vision_Responses_JSON__c</fullName>
    <label>Vision Responses JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>