force-app/main/default/objects/Carrier_RFP__c/fields/Vision_text__c.field-meta.xml
<CustomField>
    <fullName>Vision_text__c</fullName>
    <formula>IF(  Vision__c , &quot;Please Provide&quot;, &quot;Not at this time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vision text</label>
    <type>Text</type>
</CustomField>