force-app/main/default/objects/Carrier_RFP__c/fields/Wellness__c.field-meta.xml
<CustomField>
    <fullName>Wellness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wellness</label>
    <type>Checkbox</type>
</CustomField>