force-app/main/default/objects/Carrier_RFP__c/fields/WTW_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>WTW_Placeholder__c</fullName>
    <description>Dummy field used when populated JSON fields.  DR seems to need 1 field to update with a full path (node:fieldname) before it can right the full JSON to another field.  Without at least 1 field to write, it fails with &quot;reference a null object&quot; error.</description>
    <label>WTW Placeholder</label>
    <type>TextArea</type>
</CustomField>