force-app/main/default/objects/Carrier_RFP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Carrier_Vendor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dental__c</columns>
    <columns>Medical__c</columns>
    <columns>Vision__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>