force-app/main/default/objects/Carrier_RFP__c/listViews/Employee_Benefits_Carrier_RFPs.listView-meta.xml
<ListView>
    <fullName>Employee_Benefits_Carrier_RFPs</fullName>
    <columns>Account__c</columns>
    <columns>Plan_Year_Placement__c</columns>
    <columns>NAME</columns>
    <columns>Carrier_Vendor__c</columns>
    <columns>Due_Date__c</columns>
    <columns>RFP_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Carrier_Vendor__c</field>
        <operation>equals</operation>
        <value>Aetna</value>
    </filters>
    <label>Employee Benefits Carrier RFPs</label>
</ListView>